--- a/initial.html
+++ b/initial.html
@@ -1,1 +1,8 @@
-aaaaaa
+<html lang="ja">
+    <head>
+        <title>school</title>
+    </head>
+    <body>
+        hellowworld
+    </body>
+</html>
