--- a/content-ja.html
+++ b/content-ja.html
@@ -1,8 +1,8 @@
 <html lang="ja">
     <head>
-        <title>school</title>
+        <title>school-index</title>
     </head>
     <body>
-        hellowworld
+        
     </body>
 </html>
