--- a/intor-ja.html
+++ b/intor-ja.html
@@ -1,9 +1,26 @@
 <!--学校紹介のページ-->
 <html lang="ja">
-    <head>
-        <title>school-index</title>
-    </head>
-    <body>
-        
-    </body>
+
+<head>
+    <title>school-index</title>
+</head>
+
+<body>
+    <!--ヘッダー-->
+    <header>
+
+    </header>
+    <!--main-->
+    <main>
+        <h1>学校紹介</h1>
+        <h2>学校概要</h2>
+        <p></p>
+    </main>>
+
+    <!--フッター-->
+    <footer>
+
+    </footer>
+</body>
+
 </html>
