--- a/intor-ja.html
+++ b/intor-ja.html
@@ -2,6 +2,7 @@
 <html lang="ja">
 
 <head>
+    <meta charset="UTF-8">
     <title>school-index</title>
 </head>
 
@@ -14,8 +15,8 @@
     <main>
         <h1>学校紹介</h1>
         <h2>学校概要</h2>
-        <p></p>
-    </main>>
+        <p>長津のための長津の学校です</p>
+    </main>
 
     <!--フッター-->
     <footer>
