testローカルで変更しているはず

--- a/intor-ja.html
+++ b/intor-ja.html
@@ -16,6 +16,8 @@
         <h1>学校紹介</h1>
         <h2>学校概要</h2>
         <p>長津のための長津の学校です</p>
+        <p>長津のための長津の学校です</p>
+        <p>長津のための長津の学校です</p>
     </main>
 
     <!--フッター-->
