--- a/intor-ja.html
+++ b/intor-ja.html
@@ -17,7 +17,7 @@
         <h2>学校概要</h2>
         <p>長津のための長津の学校です</p>
         <p>長津のための長津の学校です</p>
-        <p>長津のための長津の学校です</p>
+        <p>長津のための長津の学校です助けてください</p>
     </main>
 
     <!--フッター-->
