文章を変更しました。

--- a/intor-ja.html
+++ b/intor-ja.html
@@ -14,10 +14,17 @@
     <!--main-->
     <main>
         <h1>学校紹介</h1>
-        <h2>学校概要</h2>
+        <h2>本学の概要</h2>
+        <p>本学では国際的に活躍でき、世界に通用するようなマネジメント能力を持つ人材の育成に 力を入れています。また人種や門地に問わず学習意欲が熱心な若者を応援します。
+        </p>
+        <h2>マネジメント能力の育成</h2>
+        <p>本学では豊かなマネジメント能力を鍛えるために独自のカリキュラムや積極的な実習を行います。 実践的な力を養い、世界に通用するような水準まであなたの能力を引き上げます。
+        </p>
+        <h2>インターナショナルスクール</h2>
+        <p>私たちは国際的な学生を教育することを目指します。 普段から英語に触れ、様々な人種、特に日本人とフランス人とが同じ空間で勉学をともにします。 早くから多国籍な人種がいる環境があることで刺激の多い3年間を過ごすことが出来ます。
+        </p>
         <p>長津のための長津の学校です</p>
-        <p>長津のための長津の学校です</p>
-        <p>長津のための長津の学校です助けてください</p>
+        <p></p>
     </main>
 
     <!--フッター-->
