フォルダ整理

--- a/index-ja.html
+++ b/index-ja.html
@@ -1,9 +1,17 @@
 <!--インデックスのページ-->
 <html lang="ja">
     <head>
+        <meta charset="utf-8">
         <title>school-index</title>
     </head>
     <body>
-        
+        <!--ヘッダー-->
+        <head class="page-header">
+            <img src="" alt="">
+        </head>
+        <!--メイン-->
+        <main class="page-main"></main>
+        <!--フッター-->
+        <footer class="page-footer"></footer>        
     </body>
 </html>
