--- a/index-ja.html
+++ b/index-ja.html
@@ -7,7 +7,7 @@
     <body>
         <!--ヘッダー-->
         <head class="page-header">
-            <img src="" alt="">
+            <img src="img/SchoolMark.png" alt="SchoolMark">
         </head>
         <!--メイン-->
         <main class="page-main"></main>
