とりあえず、書きたい内容について書き込みました。あとはめんどくさいので作ってないです。

--- a/intor-ja.html
+++ b/intor-ja.html
@@ -49,6 +49,9 @@
             </tbody>
         </table>
         <h2>学校遍歴</h2>
+        <h2>年中行事</h2>
+        <h2>クラブ</h2>
+        <h2>1年間の予定</h2>
     </main>
 
     <!--フッター-->
