--- a/access-ja.html
+++ b/access-ja.html
@@ -1,9 +1,33 @@
 <!--アクセスのページ-->
 <html lang="ja">
-    <head>
-        <title>school-index</title>
-    </head>
-    <body>
-        
-    </body>
+
+<head>
+    <meta charset="UTF-8">
+    <title>school-index</title>
+</head>
+
+<body>
+    <!--ヘッダー-->
+
+    <header class="page-header">
+        <img src="img/SchoolMark.png" alt="SchoolMark" width="80" height="80" frameborder="0" style="border:0;" allowfullscreen="">
+    </header>
+    <!--メイン-->
+    <main>
+        <h1>アクセス</h1>
+        <h2>交通機関でお越しの方へ</h2>
+        <h3>空港からお越しの方</h3>
+        <p>ダメです。</p>
+        <h3>地下鉄からお越しの方</h3>
+        <p>ダメです。</p>
+        <h3>車でお越しの方</h3>
+        <p>ダメです。</p>
+        <h2>本学立地</h2>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d805.0927908752043!2d-0.27758323046047195!3d51.50871033217819!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48760e001303304f%3A0xb1ae25fda0c30ea9!2z44Ot44Oz44OJ44Oz5pel5pys5Lq65a2m5qCh!5e0!3m2!1sja!2suk!4v1583316216109!5m2!1sja!2suk"
+            width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+    </main>
+    <!--フッター-->
+    <footer class="page-footer"></footer>
+</body>
+
 </html>
