--- a/facility-ja.html
+++ b/facility-ja.html
@@ -1,9 +1,31 @@
 <!--学校施設のページ-->
-<html lang="ja">
-    <head>
-        <title>school-index</title>
-    </head>
-    <body>
-        
-    </body>
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>facility</title>
+  </head>
+  <body>
+    <h1>本学の設備</h1>
+    <img src="garden.jpg" alt="中庭" width="500" height="300" align="left" vspace="10">
+    <h2><u>中庭</u></h2>
+    <p>本校自慢の中庭。落ち着いた雰囲気の中、食べる昼食は天下一品。時には、
+    吹奏楽部の演奏を楽しみながら優雅なランチタイムを取ることも可能です。</p><br clear="left">
+    <img src="meal.jpg" alt="食堂" width="500" height="300" align="left" vspace="10">
+    <h2><u>食堂</u></h2>
+    <p>本校には食堂もあります。毎日和食、洋食、中華の3種類を用意しています。
+    値段は400円前後なので、財布に優しいかも？</p><br clear="left">
+    <img src="sleep.png" alt="仮眠室" width="500" height="300" align="left" vspace="10">
+    <h2><u>仮眠室</u></h2>
+    <p>本校には仮眠室も完備しています。昼寝をすることは午後の活動に対して、非常に
+    効果的であることが示されており、本校でも、今年から取り入れることになりました。</p><br clear="left">
+    <img src="pc.jpg" alt="パソコン室" width="500" height="300" align="left" vspace="10">
+    <h2><u>パソコン室</u></h2>
+    <p>教育内容でも提示した通り、本校ではプログラミングの授業があります。
+    こちらのパソコン室では1人１台最新のパソコンを用意しています。</p><br clear="left" vspace="10">
+    <img src="lib.jpg" alt="図書館" width="500" height="300" align="left">
+    <h2><u>図書室</u></h2>
+    <p>本校の図書館はロンドン内でも有数の美しい図書館として有名です。ぜひ、こちらの図書館を
+    利用して本の貸し借り、勉強に活用してみては。</p><br clear="left">
+  </body>
 </html>
