--- a/index-ja.html
+++ b/index-ja.html
@@ -1,17 +1,42 @@
 <!--インデックスのページ-->
 <html lang="ja">
-    <head>
-        <meta charset="utf-8">
-        <title>school-index</title>
-    </head>
-    <body>
-        <!--ヘッダー-->
-        <head class="page-header">
-            <img src="img/SchoolMark.png" alt="SchoolMark">
-        </head>
-        <!--メイン-->
-        <main class="page-main"></main>
-        <!--フッター-->
-        <footer class="page-footer"></footer>        
-    </body>
+
+<head>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="index-ja.css">
+    <title>school-index</title>
+</head>
+
+<body>
+    <!--ヘッダー-->
+
+    <header class="page-header">
+        <div class="page-header__SchoolMark">
+            <div class="SchoolMark__logo">
+                <img src="img/SchoolMark2.png" alt="SchoolMark">
+            </div>
+        </div>
+        <div class="page-header__lang">
+            <button class="lang-EN" type="button">EN</button>
+            <button class="lang-JP" type="button">JP</button>
+            <button class="lang-FR" type="button">FR</button>
+        </div>
+        <nav class="page-header__menu">
+            <ol>
+                <li class="menu-index"><a href="index-ja.html">HOME</a></li>
+                <li class="menu-intro"><a href="intro-ja.html">学校紹介</a></li>
+                <li class="menu-content"><a href="content-ja.html">教育内容</a></li>
+                <li class="menu-facility"><a href="facility-ja.html">学校設備</a></li>
+                <li class="menu-ex"><a href="entranceExamination-ja.html">入試</a></li>
+                <li class="menu-access"><a href="access-ja.html">アクセス</a></li>
+            </ol>
+        </nav>
+    </header>
+    <!--メイン-->
+    <main class="page-main"></main>
+    <!--フッター-->
+    <footer class="page-footer"></footer>
+</body>
+
 </html>
