--- a/index-ja.html
+++ b/index-ja.html
@@ -24,12 +24,12 @@
         </div>
         <nav class="page-header__menu">
             <ol>
-                <li class="menu-index"><a href="index-ja.html">HOME</a></li>
-                <li class="menu-intro"><a href="intro-ja.html">学校紹介</a></li>
-                <li class="menu-content"><a href="content-ja.html">教育内容</a></li>
-                <li class="menu-facility"><a href="facility-ja.html">学校設備</a></li>
-                <li class="menu-ex"><a href="entranceExamination-ja.html">入試</a></li>
-                <li class="menu-access"><a href="access-ja.html">アクセス</a></li>
+                <li class="menu-index menu"id="header-menu-index"><a href="index-ja.html">ホーム</a></li>
+                <li class="menu-intro menu"id="header-menu-intro"><a href="intro-ja.html">学校紹介</a></li>
+                <li class="menu-content menu"id="header-menu-content"><a href="content-ja.html">教育内容</a></li>
+                <li class="menu-facility menu"id="header-menu-facility"><a href="facility-ja.html">学校設備</a></li>
+                <li class="menu-ex menu"id="header-menu-ex"><a href="entranceExamination-ja.html">入試</a></li>
+                <li class="menu-access menu"id="header-menu-access"><a href="access-ja.html">アクセス</a></li>
             </ol>
         </nav>
     </header>
@@ -38,5 +38,5 @@
     <!--フッター-->
     <footer class="page-footer"></footer>
 </body>
-
+<script src="header.js"></script>
 </html>
