--- a/index-ja.html
+++ b/index-ja.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="index-ja.css">
+    <link rel="stylesheet" href="header.css">
     <title>school-index</title>
 </head>
 
