--- a/inquiry-ja.html
+++ b/inquiry-ja.html
@@ -23,15 +23,15 @@
             <firm action="" method="post">
                 <div class="form_name">
                     <label for="name">Name：</label>
-                    <input type="text" id="name" name="user_name">
+                    <input type="text" id="name" name="user_name" placeholder="ロンドン　太郎">
                 </div>
                 <div class="form_mail">
                     <label for="email">Email：</label>
-                    <input type="email" id="email" name="user_email">
+                    <input type="email" id="email" name="user_email" placeholder="XXXX@YYY.ZZZ">
                 </div>
                 <div class="form_msg">
                     <label for="msg">Message：</label>
-                    <textarea id="msg" name="user_message"></textarea>
+                    <textarea id="msg" name="user_message" placeholder="Please write freely"></textarea>
                 </div>
                 <div class="button">
                     <button type="submit">Send Message</button>
