ヘッダー完成

--- a/index-ja.html
+++ b/index-ja.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="header.css">
+    <link rel="stylesheet" href="style-ja.css">
     <title>school-index</title>
 </head>
 
@@ -18,9 +19,9 @@
             </div>
         </div>
         <div class="page-header__lang">
-            <button class="lang-EN" type="button">EN</button>
-            <button class="lang-JP" type="button">JP</button>
-            <button class="lang-FR" type="button">FR</button>
+            <button class="lang-EN" type="button"onclick="en()">EN</button>
+            <button class="lang-JP" type="button"onclick="ja()">JP</button>
+            <button class="lang-FR" type="button"onclick="fr()">FR</button>
         </div>
         <nav class="page-header__menu">
             <ol>
