--- a/intro-ja.html
+++ b/intro-ja.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>school-index</title>
+    <link rel="stylesheet" href="style-ja.css">
 </head>
 
 <body>
