--- a/inquiry-ja.html
+++ b/inquiry-ja.html
@@ -14,33 +14,57 @@
     </head>
     <!--メイン-->
     <main class="page-main">
-        <h1>お問い合わせ</h1>
-        <p>本学に興味がある方はお気軽にお問い合わせください。必要事項をご入力いただきますと、本学の入学資料を送付いたします。</p>
-        <h2>電話番号</h2>
-        <p>348579347198237489123749182751263</p>
-        <h2>資料請求</h2>
-        <div class="form">
-            <firm action="" method="post">
-                <div class="form_name">
-                    <label for="name">Name：</label>
-                    <input type="text" id="name" name="user_name" placeholder="ロンドン　太郎">
+        <div>
+            <h1>お問い合わせ</h1>
+        </div>
+        <div>
+            <p>本学に興味がある方はお気軽にお問い合わせください。必要事項をご入力いただきますと、本学の入学資料を送付いたします。</p>
+            <div>
+                <h2>電話番号</h2>
+                <p>348579347198237489123749182751263</p>
+            </div>
+            <div>
+                <h2>資料請求</h2>
+                <div class="form">
+                    <form name="fome1" action="" method="post">
+                        <div class="form_name">
+                            <label for="name">Name：</label>
+                            <input type="text" id="name" name="user_name" placeholder="ロンドン　太郎">
+                        </div>
+                        <div class="form_mail">
+                            <label for="email">Email：</label>
+                            <input type="email" id="email" name="user_email" placeholder="XXXX@YYY.ZZZ">
+                        </div>
+                        <div class="form_msg">
+                            <label for="msg">Message：</label>
+                            <textarea id="msg" name="user_message" placeholder="Please write freely"></textarea>
+                        </div>
+                        <div class="form_button">
+                            <input type="button" id="btn" value="Send Message" onclick="sendMessage()">
+                            <script type="text/javascript">
+                                function sendMessage() {
+                                    var name = document.getElementById('name').value;
+                                    var email = document.getElementById('email').value;
+                                    var msg = document.getElementById('msg').value;
+                                    /*--デバック用コンソール--
+                                    console.log(name);
+                                    console.log(email);
+                                    console.log(msg);
+                                    -------------------------*/
+                                    var message = String("name : " + name + "\nEmail : " + email + "\n\n---message---\n" + msg + "\n----------------\n" + "\n以上の内容で送信しました。");
+                                    alert(message);
+                                }
+                            </script>
+                        </div>
+                    </form>
                 </div>
-                <div class="form_mail">
-                    <label for="email">Email：</label>
-                    <input type="email" id="email" name="user_email" placeholder="XXXX@YYY.ZZZ">
-                </div>
-                <div class="form_msg">
-                    <label for="msg">Message：</label>
-                    <textarea id="msg" name="user_message" placeholder="Please write freely"></textarea>
-                </div>
-                <div class="button">
-                    <button type="submit">Send Message</button>
-                </div>
-            </firm>
+            </div>
         </div>
     </main>
     <!--フッター-->
     <footer class="page-footer"></footer>
 </body>
+
+
 
 </html>
