--- a/access-ja.html
+++ b/access-ja.html
@@ -3,14 +3,35 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="header.css">
+    <link rel="stylesheet" href="style-ja.css">
     <title>school-index</title>
 </head>
 
 <body>
     <!--ヘッダー-->
-
     <header class="page-header">
-        <img src="img/SchoolMark.png" alt="SchoolMark" width="80" height="80" frameborder="0" style="border:0;" allowfullscreen="">
+        <div class="page-header__SchoolMark">
+            <div class="SchoolMark__logo">
+                <img src="img/SchoolMark2.png" alt="SchoolMark">
+            </div>
+        </div>
+        <div class="page-header__lang">
+            <button class="lang-EN" type="button"onclick="en()">EN</button>
+            <button class="lang-JP" type="button"onclick="ja()">JP</button>
+            <button class="lang-FR" type="button"onclick="fr()">FR</button>
+        </div>
+        <nav class="page-header__menu">
+            <ol>
+                <li class="menu-index menu"id="header-menu-index"><a href="index-ja.html">ホーム</a></li>
+                <li class="menu-intro menu"id="header-menu-intro"><a href="intro-ja.html">学校紹介</a></li>
+                <li class="menu-content menu"id="header-menu-content"><a href="content-ja.html">教育内容</a></li>
+                <li class="menu-facility menu"id="header-menu-facility"><a href="facility-ja.html">学校設備</a></li>
+                <li class="menu-ex menu"id="header-menu-ex"><a href="entranceExamination-ja.html">入試</a></li>
+                <li class="menu-access menu"id="header-menu-access"><a href="access-ja.html">アクセス</a></li>
+            </ol>
+        </nav>
     </header>
     <!--メイン-->
     <main>
@@ -29,5 +50,5 @@
     <!--フッター-->
     <footer class="page-footer"></footer>
 </body>
-
+<script src="header.js"></script>
 </html>
