--- a/facility-ja.html
+++ b/facility-ja.html
@@ -1,36 +1,76 @@
 <!--学校施設のページ-->
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>facility</title>
-  </head>
-  <body>
+
+<head>
+  <meta charset="utf-8">
+  <link rel="stylesheet" href="reset.css">
+  <link rel="stylesheet" href="header.css">
+  <link rel="stylesheet" href="style-ja.css">
+  <title>facility</title>
+</head>
+
+<body>
+  <!--ヘッダー-->
+  <header class="page-header">
+    <div class="page-header__SchoolMark">
+      <div class="SchoolMark__logo">
+        <img src="img/SchoolMark2.png" alt="SchoolMark">
+      </div>
+    </div>
+    <div class="page-header__lang">
+      <button class="lang-EN" type="button" onclick="en()">EN</button>
+      <button class="lang-JP" type="button" onclick="ja()">JP</button>
+      <button class="lang-FR" type="button" onclick="fr()">FR</button>
+    </div>
+    <nav class="page-header__menu">
+      <ol>
+        <li class="menu-index menu" id="header-menu-index"><a href="index-ja.html">ホーム</a></li>
+        <li class="menu-intro menu" id="header-menu-intro"><a href="intro-ja.html">学校紹介</a></li>
+        <li class="menu-content menu" id="header-menu-content"><a href="content-ja.html">教育内容</a></li>
+        <li class="menu-facility menu" id="header-menu-facility"><a href="facility-ja.html">学校設備</a></li>
+        <li class="menu-ex menu" id="header-menu-ex"><a href="entranceExamination-ja.html">入試</a></li>
+        <li class="menu-access menu" id="header-menu-access"><a href="access-ja.html">アクセス</a></li>
+      </ol>
+    </nav>
+  </header>
+  <!--メイン-->
+  <main class="page-main">
     <h1>本学の設備</h1>
     <p>
       <img src="img/facility/garden.jpg" alt="中庭" width="700" height="420" align="left" vspace="10">
       <h2><u>中庭</u></h2>
       本校自慢の中庭。落ち着いた雰囲気の中、食べる昼食は天下一品。時には、
-      吹奏楽部の演奏を楽しみながら優雅なランチタイムを取ることも可能です。<br clear="left"></p>
+      吹奏楽部の演奏を楽しみながら優雅なランチタイムを取ることも可能です。<br clear="left">
+    </p>
     <p>
       <img src="img/facility/meal.jpg" alt="食堂" width="700" height="420" align="left" vspace="10">
       <h2><u>食堂</u></h2>
       本校には食堂もあります。毎日和食、洋食、中華の3種類を用意しています。
-      値段は400円前後なので、財布に優しいかも？<br clear="left"></p>
+      値段は400円前後なので、財布に優しいかも？<br clear="left">
+    </p>
     <p>
       <img src="img/facility/sleep.png" alt="仮眠室" width="700" height="420" align="left" vspace="10">
       <h2><u>仮眠室</u></h2>
       本校には仮眠室も完備しています。昼寝をすることは午後の活動に対して、非常に
-      効果的であることが示されており、本校でも、今年から取り入れることになりました。<br clear="left"></p>
+      効果的であることが示されており、本校でも、今年から取り入れることになりました。<br clear="left">
+    </p>
     <p>
       <img src="img/facility/true-office.png" alt="パソコン室" width="700" height="420" align="left" vspace="10">
       <h2><u>パソコン室</u></h2>
       教育内容でも提示した通り、本校ではプログラミングの授業があります。
-      こちらのパソコン室では1人１台最新のパソコンを用意しています。<br clear="left"></p>
+      こちらのパソコン室では1人１台最新のパソコンを用意しています。<br clear="left">
+    </p>
     <p>
       <img src="img/facility/lib.jpg" alt="図書館" width="700" height="420" align="left" vspace="10">
       <h2><u>図書室</u></h2>
       本校の図書館はロンドン内でも有数の美しい図書館として有名です。ぜひ、こちらの図書館を
-      利用して本の貸し借り、勉強に活用してみては。<br clear="left"></p>
-  </body>
+      利用して本の貸し借り、勉強に活用してみては。<br clear="left">
+    </p>
+  </main>
+  <!--フッター-->
+  <footer class="page-footer"></footer>
+</body>
+<script src="header.js"></script>
+
 </html>
