--- a/entranceExamination-ja.html
+++ b/entranceExamination-ja.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 
 <head>
-  <meta lang="utf-8">
+  <meta charset="utf-8">
   <link rel="stylesheet" href="reset.css">
   <link rel="stylesheet" href="header.css">
   <link rel="stylesheet" href="style-ja.css">
