--- a/facility-ja.html
+++ b/facility-ja.html
@@ -23,7 +23,7 @@
       本校には仮眠室も完備しています。昼寝をすることは午後の活動に対して、非常に
       効果的であることが示されており、本校でも、今年から取り入れることになりました。<br clear="left"></p>
     <p>
-      <img src="img/facility/true-office.png" alt="パソコン室" width="700" height="420" align="left" vspace="10">
+      <img src="img/facility/office.png" alt="パソコン室" width="700" height="420" align="left" vspace="10">
       <h2><u>パソコン室</u></h2>
       教育内容でも提示した通り、本校ではプログラミングの授業があります。
       こちらのパソコン室では1人１台最新のパソコンを用意しています。<br clear="left"></p>
