お問い合わせ追加

--- a/entranceExamination-ja.html
+++ b/entranceExamination-ja.html
@@ -30,6 +30,7 @@
         <li class="menu-facility menu" id="header-menu-facility"><a href="facility-ja.html">学校設備</a></li>
         <li class="menu-ex menu" id="header-menu-ex"><a href="entranceExamination-ja.html">入試</a></li>
         <li class="menu-access menu" id="header-menu-access"><a href="access-ja.html">アクセス</a></li>
+        <li class="menu-inquiry menu" id="header-menu-inquiry"><a href="inquiry-ja.html">お問い合わせ</a></li>
       </ol>
     </nav>
   </header>
