--- a/facility-ja.html
+++ b/facility-ja.html
@@ -57,7 +57,7 @@
       効果的であることが示されており、本校でも、今年から取り入れることになりました。<br clear="left">
     </p>
     <p>
-      <img src="img/facility/true-office.png" alt="パソコン室" width="700" height="420" align="left" vspace="10">
+      <img src="img/facility/office.png" alt="パソコン室" width="700" height="420" align="left" vspace="10">
       <h2><u>パソコン室</u></h2>
       教育内容でも提示した通り、本校ではプログラミングの授業があります。
       こちらのパソコン室では1人１台最新のパソコンを用意しています。<br clear="left">
