--- a/content-ja.html
+++ b/content-ja.html
@@ -35,49 +35,50 @@
         </nav>
     </header>
     <!--メイン-->
-    <main class="page-main"></main>
-      <h1>教育内容</h1>
+    <main class="page-main"><h1>教育内容</h1>
       <div class="content">
         <p>本校では教育にも力を入れています。以下に授業の一部を掲載します。</p>
         <p>
-          <img src="img/content/text.jpg" alt="共通科目" width="700" height="420" align="left" vspace="10">
+          <img src="img/content/text.jpg" alt="共通科目">
           <h2><u>共通科目</u></h2>
           全学年で共通科目の学習をします。2年次、3年次の基盤となるものなので、1年次には教師陣が
           特に力を入れています。しっかりついてきてください。<br clear="left">
         </p>
         <p>
-          <img src="img/content/law.jpg" alt="法" width="700" height="420" align="left" vspace="10">
+          <img src="img/content/law.jpg" alt="法">
           <h2><u>法</u></h2>
           法についても学びます。<br clear="left">
         </p>
         <p>
-          <img src="img/content/marketing.jxr" alt="マーケティング" width="700" height="420" align="left" vspace="10">
+          <img src="img/content/marketing.jxr" alt="マーケティング">
           <h2><u>マーケティング</u></h2>
           マネジメントの基本であるマーケティングについて学びます。マーケティングと聞くと
           難しいと感じるかもしれませんが、本校教師が自信を持って分かりやすく説明します。<br clear="left">
         </p>
         <p>
-          <img src="img/content/finance.jpg" alt="ファイナンス" width="700" height="420" align="left" vspace="10">
+          <img src="img/content/finance.jpg" alt="ファイナンス">
           <h2><u>ファイナンス</u></h2>
           やはり、金融に関しても抑えておかないといけません。みんなお金好きだよね？
           経済の回し方を知り、お金を上手に扱えるようになりましょう。<br clear="left">
         </p>
         <p>
-          <img src="img/content/prog.jpg" alt="プログラミング" width="700" height="420" align="left" vspace="10">
+          <img src="img/content/prog.jpg" alt="プログラミング">
           <h2><u>プログラミング</u></h2>
           「プログラミング能力がその人の能力」と言われるほど、非常に重要な授業です。
           初歩的なところから始めて少しづつ難しくなりますが、共に頑張りましょう。<br clear="left">
         </p>
         <p>
-          <img src="img/content/e-business.jpg" alt="e-ビジネス" width="700" height="420" align="left" vspace="10">
+          <img src="img/content/e-business.jpg" alt="e-ビジネス">
           <h2><u>e-ビジネス</u></h2>
           今の時代、e-ビジネスは必須です。言葉くらいは聞いたことがあるのでは？
           本校では、2年前からe-ビジネスの授業を取り入れました。<br clear="left">
         </p>
       </div>
       <div class="figure">
-        <img src="img/content/figure.jpg" alt="図" width="700" height="420" vspace="10">
+        <img src="img/content/figure.jpg" alt="図">
       </div>
+    </main>
+
     <!--フッター-->
     <footer class="page-footer"></footer>
 </body>
