--- a/index-ja.html
+++ b/index-ja.html
@@ -18,9 +18,9 @@
             </div>
         </div>
         <div class="page-header__lang">
-            <button class="lang-EN" type="button" onclick="en()">EN</button>
-            <button class="lang-JP" type="button" onclick="ja()">JP</button>
-            <button class="lang-FR" type="button" onclick="fr()">FR</button>
+            <button class="lang-EN" type="button" onclick="en()">　</button>
+            <button class="lang-JP" type="button" onclick="ja()">　</button>
+            <button class="lang-FR" type="button" onclick="fr()">　</button>
         </div>
         <nav class="page-header__menu">
             <ol>
