--- a/japanese/intro-ja.html
+++ b/japanese/intro-ja.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <title>school-index</title>
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="header.css">
-    <link rel="stylesheet" href="style-ja.css">
+    <link rel="stylesheet" href="../reset.css">
+    <link rel="stylesheet" href="../header.css">
+    <link rel="stylesheet" href="../style-ja.css">
 </head>
 
 <body>
@@ -14,7 +14,7 @@
     <header class="page-header">
         <div class="page-header__SchoolMark">
             <div class="SchoolMark__logo">
-                <img src="img/SchoolMark2.png" alt="SchoolMark">
+                <img src="../img/SchoolMark2.png" alt="SchoolMark">
             </div>
         </div>
         <div class="page-header__lang">
