ファイル整理2

--- a/japanese/entranceExamination-ja.html
+++ b/japanese/entranceExamination-ja.html
@@ -3,9 +3,9 @@
 
 <head>
   <meta lang="utf-8">
-  <link rel="stylesheet" href="../reset.css">
-  <link rel="stylesheet" href="../header.css">
-  <link rel="stylesheet" href="../style-ja.css">
+  <link rel="stylesheet" href="../css/reset.css">
+  <link rel="stylesheet" href="../css/header.css">
+  <link rel="stylesheet" href="../css/style-ja.css">
   <title>入学試験について</title>
 </head>
 
