--- a/japanese/content-ja.html
+++ b/japanese/content-ja.html
@@ -3,9 +3,9 @@
 
 <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="../reset.css">
-    <link rel="stylesheet" href="../header.css">
-    <link rel="stylesheet" href="../style-ja.css">
+    <link rel="stylesheet" href="../css/reset.css">
+    <link rel="stylesheet" href="../css/header.css">
+    <link rel="stylesheet" href="../css/style-ja.css">
     <title>school-index</title>
 </head>
 
