--- a/japanese/facility-ja.html
+++ b/japanese/facility-ja.html
@@ -4,9 +4,9 @@
 
 <head>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="../reset.css">
-  <link rel="stylesheet" href="../header.css">
-  <link rel="stylesheet" href="../style-ja.css">
+  <link rel="stylesheet" href="../css/reset.css">
+  <link rel="stylesheet" href="../css/header.css">
+  <link rel="stylesheet" href="../css/style-ja.css">
   <title>facility</title>
 </head>
 
