--- a/japanese/intro-ja.html
+++ b/japanese/intro-ja.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <title>school-index</title>
-    <link rel="stylesheet" href="../reset.css">
-    <link rel="stylesheet" href="../header.css">
-    <link rel="stylesheet" href="../style-ja.css">
+    <link rel="stylesheet" href="../css/reset.css">
+    <link rel="stylesheet" href="../css/header.css">
+    <link rel="stylesheet" href="../css/style-ja.css">
 </head>
 
 <body>
