--- a/japanese/access-ja.html
+++ b/japanese/access-ja.html
@@ -66,7 +66,7 @@
           </table>
         </div>
         <div class="figure">
-          <img src="img/access/access.jpg" alt="図">
+          <img src="../img/access/access.jpg" alt="図">
         </div>
         <div class="map">
           <h2>本学立地</h2>
