言語別ファイル追加と微調整

--- a/english/index-en.html
+++ b/english/index-en.html
@@ -1,12 +1,12 @@
 <!--インデックスのページ-->
-<html lang="ja">
+<html lang="en">
 
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/header.css">
     <link rel="stylesheet" href="../css/style-ja.css">
-    <title>ホーム</title>
+    <title>HOME</title>
 </head>
 
 <body>
@@ -24,13 +24,13 @@
         </div>
         <nav class="page-header__menu">
             <ol>
-                <li class="menu-index menu" id="header-menu-index"><a href="index-ja.html">ホーム</a></li>
-                <li class="menu-intro menu" id="header-menu-intro"><a href="intro-ja.html">学校紹介</a></li>
-                <li class="menu-content menu" id="header-menu-content"><a href="content-ja.html">教育内容</a></li>
-                <li class="menu-facility menu" id="header-menu-facility"><a href="facility-ja.html">学校設備</a></li>
-                <li class="menu-ex menu" id="header-menu-ex"><a href="entranceExamination-ja.html">入試</a></li>
-                <li class="menu-access menu" id="header-menu-access"><a href="access-ja.html">アクセス</a></li>
-                <li class="menu-inquiry menu" id="header-menu-inquiry"><a href="inquiry-ja.html">お問い合わせ</a></li>
+                <li class="menu-index menu" id="header-menu-index"><a href="index-en.html">HOME</a></li>
+                <li class="menu-intro menu" id="header-menu-intro"><a href="intro-en.html">Introduction</a></li>
+                <li class="menu-content menu" id="header-menu-content"><a href="content-en.html">Education Content</a></li>
+                <li class="menu-facility menu" id="header-menu-facility"><a href="facility-en.html">School Equipment</a></li>
+                <li class="menu-ex menu" id="header-menu-ex"><a href="entranceExamination-en.html">Entrance Examination</a></li>
+                <li class="menu-access menu" id="header-menu-access"><a href="access-en.html">Access</a></li>
+                <li class="menu-inquiry menu" id="header-menu-inquiry"><a href="inquiry-en.html">Inquiry</a></li>
             </ol>
         </nav>
     </header>
