--- a/japanese/access-ja.html
+++ b/japanese/access-ja.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/header.css">
     <link rel="stylesheet" href="../css/style-ja.css">
-    <title>school-index</title>
+    <title>アクセス</title>
 </head>
 
 <body>
@@ -78,6 +78,6 @@
     <!--フッター-->
     <footer class="page-footer"></footer>
 </body>
-<script src="header.js"></script>
+<script src="../header.js"></script>
 
 </html>
