--- a/japanese/content-ja.html
+++ b/japanese/content-ja.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/header.css">
     <link rel="stylesheet" href="../css/style-ja.css">
-    <title>school-index</title>
+    <title>教育内容</title>
 </head>
 
 <body>
@@ -82,6 +82,6 @@
     <!--フッター-->
     <footer class="page-footer"></footer>
 </body>
-<script src="header.js"></script>
+<script src="../header.js"></script>
 
 </html>
