--- a/japanese/entranceExamination-ja.html
+++ b/japanese/entranceExamination-ja.html
@@ -79,6 +79,6 @@
   <!--フッター-->
   <footer class="page-footer"></footer>
 </body>
-<script src="header.js"></script>
+<script src="../header.js"></script>
 
 </html>
