--- a/japanese/facility-ja.html
+++ b/japanese/facility-ja.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="../css/reset.css">
   <link rel="stylesheet" href="../css/header.css">
   <link rel="stylesheet" href="../css/style-ja.css">
-  <title>facility</title>
+  <title>学校設備</title>
 </head>
 
 <body>
@@ -72,6 +72,6 @@
   <!--フッター-->
   <footer class="page-footer"></footer>
 </body>
-<script src="header.js"></script>
+<script src="../header.js"></script>
 
 </html>
