--- a/japanese/intro-ja.html
+++ b/japanese/intro-ja.html
@@ -3,10 +3,10 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>school-index</title>
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/header.css">
     <link rel="stylesheet" href="../css/style-ja.css">
+    <title>学校紹介</title>
 </head>
 
 <body>
@@ -82,5 +82,5 @@
 
     </footer>
 </body>
-<script src="header.js"></script>
+<script src="../header.js"></script>
 </html>
