--- a/japanese/inquiry-ja.html
+++ b/japanese/inquiry-ja.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/header.css">
     <link rel="stylesheet" href="../css/style-ja.css">
-    <title>school-index</title>
+    <title>お問い合わせ</title>
 </head>
 
 <body>
@@ -86,5 +86,5 @@
     <!--フッター-->
     <footer class="page-footer"></footer>
 </body>
-<script src="header.js"></script>
+<script src="../header.js"></script>
 </html>
