--- a/japanese/access-ja.html
+++ b/japanese/access-ja.html
@@ -71,8 +71,8 @@
         </div>
         <div class="map">
           <h2>本学立地</h2>
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d805.0927908752043!2d-0.27758323046047195!3d51.50871033217819!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48760e001303304f%3A0xb1ae25fda0c30ea9!2z44Ot44Oz44OJ44Oz5pel5pys5Lq65a2m5qCh!5e0!3m2!1sja!2suk!4v1583316216109!5m2!1sja!2suk"
-              width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4010.3314678545985!2d-0.2827834859472339!3d51.51414552059801!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f20!3m3!1m2!1s0x48760e001303304f%3A0xb1ae25fda0c30ea9!2z44Ot44Oz44OJ44Oz5pel5pys5Lq65a2m5qCh!5e0!3m2!1sja!2sfr!4v1583744827474!5m2!1sja!2sfr"
+                    width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
         </div>
     </main>
     <!--フッター-->
