--- a/japanese/inquiry-ja.html
+++ b/japanese/inquiry-ja.html
@@ -18,18 +18,18 @@
             </div>
         </div>
         <div class="page-header__lang">
-            <button class="lang-EN" type="button"onclick="en()">　</button>
-            <button class="lang-JP" type="button"onclick="ja()">　</button>
-            <button class="lang-FR" type="button"onclick="fr()">　</button>
+            <button class="lang-EN" type="button" onclick="en()">　</button>
+            <button class="lang-JP" type="button" onclick="ja()">　</button>
+            <button class="lang-FR" type="button" onclick="fr()">　</button>
         </div>
         <nav class="page-header__menu">
             <ol>
-                <li class="menu-index menu"id="header-menu-index"><a href="index-ja.html">ホーム</a></li>
-                <li class="menu-intro menu"id="header-menu-intro"><a href="intro-ja.html">学校紹介</a></li>
-                <li class="menu-content menu"id="header-menu-content"><a href="content-ja.html">教育内容</a></li>
-                <li class="menu-facility menu"id="header-menu-facility"><a href="facility-ja.html">学校設備</a></li>
-                <li class="menu-ex menu"id="header-menu-ex"><a href="entranceExamination-ja.html">入試</a></li>
-                <li class="menu-access menu"id="header-menu-access"><a href="access-ja.html">アクセス</a></li>
+                <li class="menu-index menu" id="header-menu-index"><a href="index-ja.html">ホーム</a></li>
+                <li class="menu-intro menu" id="header-menu-intro"><a href="intro-ja.html">学校紹介</a></li>
+                <li class="menu-content menu" id="header-menu-content"><a href="content-ja.html">教育内容</a></li>
+                <li class="menu-facility menu" id="header-menu-facility"><a href="facility-ja.html">学校設備</a></li>
+                <li class="menu-ex menu" id="header-menu-ex"><a href="entranceExamination-ja.html">入試</a></li>
+                <li class="menu-access menu" id="header-menu-access"><a href="access-ja.html">アクセス</a></li>
                 <li class="menu-inquiry menu" id="header-menu-inquiry"><a href="inquiry-ja.html">お問い合わせ</a></li>
             </ol>
         </nav>
@@ -51,11 +51,11 @@
                     <form name="fome1" action="" method="post">
                         <div class="form_name">
                             <label for="name">Name：</label>
-                            <input type="text" id="name" name="user_name" placeholder="ロンドン　太郎">
+                            <input type="text" required id="name" name="user_name" placeholder="ロンドン　太郎">
                         </div>
                         <div class="form_mail">
                             <label for="email">Email：</label>
-                            <input type="email" id="email" name="user_email" placeholder="XXXX@YYY.ZZZ">
+                            <input type="email" required id="email" name="user_email" placeholder="XXXX@YYY.ZZZ">
                         </div>
                         <div class="form_msg">
                             <label for="msg">Message：</label>
@@ -73,7 +73,11 @@
                                     console.log(email);
                                     console.log(msg);
                                     -------------------------*/
-                                    var message = String("name : " + name + "\nEmail : " + email + "\n\n---message---\n" + msg + "\n----------------\n" + "\n以上の内容で送信しました。");
+                                    if (name == "" || email == "") {
+                                        var message = String("NameとEmailは必須項目です。");
+                                    } else {
+                                        var message = String("name : " + name + "\nEmail : " + email + "\n\n---message---\n" + msg + "\n----------------\n" + "\n以上の内容で送信しました。");
+                                    }
                                     alert(message);
                                 }
                             </script>
@@ -87,4 +91,5 @@
     <footer class="page-footer"></footer>
 </body>
 <script src="../header.js"></script>
+
 </html>
