文章の変更

--- a/japanese/facility-ja.html
+++ b/japanese/facility-ja.html
@@ -60,7 +60,7 @@
       本校には仮眠室も完備しています。昼寝をすることは午後の活動に対して、非常に効果的であることが示されており、
       本校でも、今年から取り入れることにしました。空調管理、衛生管理を徹底しており、快適な昼寝をすることができます。
       仮眠室の導入は非常に好調で、多くの生徒、親御さんから前向きな評価をいただいています。
-      時には、仮眠室が一杯になっていしまい、場所が足りないことがあるので、現在仮眠室の拡張を検討しています。
+      時には、仮眠室が一杯になってしまい、場所が足りないことがあるので、現在仮眠室の拡張を検討しています。
     </p>
     <p>
       <h2><u>パソコン室</u></h2>
