入試の英訳

--- a/english/entranceExamination-en.html
+++ b/english/entranceExamination-en.html
@@ -35,7 +35,48 @@
         </nav>
     </header>
     <!--メイン-->
-    <main class="page-main"></main>
+    <main class="page-main">
+      <h1>Entrance Examination</h1>
+      <table border="1">
+          <tr>
+              <th>How to application</th>
+              <td>Web application</td>
+          </tr>
+          <tr>
+              <th>Date of application</th>
+              <td>Saturday, March 7</td>
+          </tr>
+          <tr>
+              <th>Date of examination</th>
+              <td>Saturday, March 21</td>
+          </tr>
+          <tr>
+              <th>Selection content</th>
+              <td>First selection:Document screening<br>
+                  Second selection:Academic screening (200points(English:100 points,Mathematics:100 points),both is 60 minutes)<br>
+                  Final selection:Interview
+              </td>
+          </tr>
+          <tr>
+              <th>Announcement of passing</th>
+              <td>Saturday, April 4</td>
+          </tr>
+          <tr>
+              <th>Deadline of Admission procedure</th>
+              <td>Saturday, April 11</td>
+          </tr>
+          <tr>
+              <th>Qualification of application</th>
+              <td>TOEIC score is more than 600 or TOEFL score is more than 50<br>
+                  Grade of English and Mathematics is B or more<br>
+                  Attendance at the school briefing session on the Web
+          </tr>
+          <tr>
+              <th>Recruitment capacity</th>
+              <td>100 people</td>
+          </tr>
+      </table>
+    </main>
     <!--フッター-->
     <footer class="page-footer"></footer>
 </body>
