--- a/japanese/entranceExamination-ja.html
+++ b/japanese/entranceExamination-ja.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 
 <head>
-  <meta lang="utf-8">
+  <meta charset="utf-8">
   <link rel="stylesheet" href="../css/reset.css">
   <link rel="stylesheet" href="../css/header.css">
   <link rel="stylesheet" href="../css/style-ja.css">
