--- a/japanese/index-ja.html
+++ b/japanese/index-ja.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/header.css">
     <link rel="stylesheet" href="../css/style-ja.css">
+    <link rel="stylesheet" href="../css/index-ja.css">
     <title>ホーム</title>
 </head>
 
@@ -35,7 +36,20 @@
         </nav>
     </header>
     <!--メイン-->
-    <main class="page-main"></main>
+    <main class="page-main">
+        <div class="page-main__header">
+            <h1 class="page-main__header1">Welcome to</h1>
+            <h1 class="page-main__header2">London Management School</h1>
+        </div>
+        <div class="page-main__content">
+            <section class="content-news content">
+                <h2 class="content-news__header">NEWS</h2>
+            </section>
+            <section class="content-contents content">
+                <h2 class="content-contents__header">CONTENTS</h2>
+            </section>
+        </div>
+    </main>
     <!--フッター-->
     <footer class="page-footer"></footer>
 </body>
